Version 0.34 (???)
------------------
* Add ExplicitExports="false" to NuGet .dna file template
* Fix getting Application from ProtectedViewWindow
* Add attempts to get Application object from all windows of class EXCEL7.
* Fix ExcelAsyncUtil.Observe re-open restart - broken by other fixes in the previous version.
* Change ExcelRtdServer.ConnectData to be more careful about raising an update notice. 
  Calls to Topic.UpdateNotify during the ConnectData overload are now always ignored.
  If the topic value is updated (through Topic.UpdateValue) during ConnectData, and the same value is returned from ConnectData, 
  then no spurious UpdateNotify is raised.
  If the value returned from ConnectData differs from Topic.Value, UpdateNotify will still be raised.
* Allow AccessViolation exceptions to be caught under .NET 4.0 - change marshaling wrapper from DynamicMethod to MethodBuilder.

Version 0.33 (9 September 2015)
-------------------------------
* Improve RtdObserver/Async array function handling to ensure RTD DisconnectData when complete.
* Suppress CustomUI loading when running embedded with /K switch.
* Fix timer leak in ExcelDnaUtil.QueueAsMacro (incorrect timer id tracking).
* Allow CommandBars find by Id.
* Save source files as binary when packing.
* Add further workaround for RTD bugs in Excel 2010 RTM.
* Fix memory leak where on-demand registered RTD servers were not garbage collected after ServerTerminate().
* Change COM registrations (for RTD, ribbon and CTP) to always try machine hive first, before falling back to user hive.
* Allow byte[] as parameters key in ExcelRtdObservable, to support storing only an opaque hash instead of the full parameter set.
* Fix race condition between ExcelRtdObserver.OnNext(), DateTime.ToOADateTime() and Excel calling RefreshData().
* Fix integer return type with IsExceptionSafe=true crashes in marshaling.
* Update ExcelReference to allow immutable use, mark AddRectangle mutator Obsolete. Add operator== to AsyncCallInfo.